--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,8 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: v3.5.0+zmk-fixes
+      # revision: main
       import: app/west.yml
     - name: zmk-leader-key
       remote: urob
