--- a/config/west.yml
+++ b/config/west.yml
@@ -7,7 +7,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: v3.5.0+zmk-fixes
+      revision: v0.2
       # revision: main
       import: app/west.yml
     - name: zmk-leader-key
