--- a/config/corne.conf
+++ b/config/corne.conf
@@ -26,7 +26,7 @@ CONFIG_ZMK_RGB_UNDERGLOW=n
 # Mouse
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 #
-# CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING=y
 # CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 #
 # CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
