--- a/config/west.yml
+++ b/config/west.yml
@@ -14,5 +14,17 @@ manifest:
     - name: zmk-leader-key
       remote: urob
       revision: v0.2
+    - name: zmk-helpers
+      remote: urob
+      revision: v0.2
+    - name: zmk-auto-layer
+      remote: urob
+      revision: v0.2
+    - name: zmk-adaptive-key
+      remote: urob
+      revision: v0.2
+    - name: zmk-tri-state
+      remote: urob
+      revision: v0.2
   self:
     path: config
